<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2020 Bartek Fabiszewski
  ~ http://www.fabiszewski.net
  ~
  ~ This file is part of μlogger-android.
  ~ Licensed under GPL, either version 3, or any later.
  ~ See <http://www.gnu.org/licenses/>
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <net.tomsh.phonetracklogger.ui.SwipeSwitch
            android:id="@+id/switchLogger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_margin_start"
            android:layout_marginTop="@dimen/switch_margin_top"
            android:layout_marginEnd="@dimen/main_margin_end"
            android:checked="false"
            android:maxLines="1"
            android:paddingTop="@dimen/swipe_padding_top"
            android:paddingBottom="@dimen/swipe_padding_bottom"
            android:text="@string/tracking"
            android:textColor="@color/text"
            android:textIsSelectable="false"
            android:textSize="16sp"
            android:thumb="@drawable/thumb_selector"
            app:switchMinWidth="@dimen/switch_min_width"
            app:switchPadding="@dimen/switch_padding"
            app:track="@drawable/track_selector" />

        

        <LinearLayout
            android:id="@+id/layoutServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin_start"
            android:layout_marginTop="@dimen/block_distance"
            android:layout_marginEnd="@dimen/main_margin_end"
            android:background="@drawable/round_corners_background"
            android:backgroundTint="@color/primary"
            android:orientation="horizontal"
            android:paddingStart="@dimen/block_padding_x"
            android:paddingTop="@dimen/block_padding_y"
            android:paddingEnd="@dimen/block_padding_x"
            android:paddingBottom="@dimen/block_padding_y">

            <!-- Left column with icon and label -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:clickable="false"
                android:focusable="false">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/block_padding_drawable"
                    android:text="@string/label_server"
                    android:textSize="@dimen/label_font_size"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_cloud_upload_white_24dp" />

                <TextView
                    android:id="@+id/server_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/block_indent"
                    android:text="@string/dash"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/label_font_size"
                    tools:text="https://nextcloud.mydomain.com/phonetrack" />

                <TextView
                    android:id="@+id/sync_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/block_indent"
                    android:text=""
                    android:textColor="@color/colorPink"
                    android:textSize="@dimen/label_font_size"
                    android:visibility="gone"
                    tools:text="Connection error: Failed to connect to /10.0.0.15:80"
                    tools:visibility="visible" />
            </LinearLayout>

            <!-- Sync Button -->
            <Button
    android:id="@+id/buttonSync"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|end"
    android:layout_marginStart="@dimen/block_padding_share_start"
    android:text="@string/button_sync"
    android:drawableTop="@drawable/ic_cloud_upload_white_24dp"
    android:textAllCaps="false"
    android:backgroundTint="@color/primary"
    android:background="@drawable/round_corners_background"
    android:padding="12dp"
    android:textColor="@color/text"
    android:shadowColor="#80000000"
    android:shadowDx="2"
    android:shadowDy="2"
    android:shadowRadius="4"
    android:visibility="gone" />



            <!-- Setup Server Button -->
            <Button
                android:id="@+id/buttonSetupServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="8dp"
                android:text="@string/setup_server"
                android:visibility="gone" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin_start"
            android:layout_marginTop="@dimen/block_distance"
            android:layout_marginEnd="@dimen/main_margin_end"
            android:background="@drawable/round_corners_background"
            android:backgroundTint="@color/primary"
            android:orientation="vertical"
            android:paddingStart="@dimen/block_padding_x"
            android:paddingTop="@dimen/block_padding_y"
            android:paddingEnd="@dimen/block_padding_x"
            android:paddingBottom="@dimen/block_padding_y">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/block_padding_drawable"
                android:text="@string/label_status"
                android:textSize="@dimen/label_font_size"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_favorite_border_white_24dp" />

            <TextView
                android:id="@+id/loc_led"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="@dimen/block_padding_led_end"
                android:paddingStart="@dimen/block_padding_led_start"
                android:paddingEnd="@dimen/block_padding_led_start"
                android:text="@string/label_location"
                android:textSize="@dimen/label_font_size"
                app:drawableStartCompat="@drawable/led" />

            <TextView
                android:id="@+id/location_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/block_indent"
                android:text="@string/dash"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/label_font_size"
                tools:text="Last update: 2020-06-18 22.09" />

            <TextView
                android:id="@+id/sync_led"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="@dimen/block_padding_led_end"
                android:paddingStart="@dimen/block_padding_led_start"
                android:paddingEnd="@dimen/block_padding_led_start"
                android:text="@string/label_synchronization"
                android:textSize="@dimen/label_font_size"
                app:drawableStartCompat="@drawable/led" />

            <TextView
                android:id="@+id/sync_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/block_indent"
                android:text="@string/dash"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/label_font_size"
                tools:text="3 positions behind" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin_start"
            android:layout_marginTop="@dimen/block_distance"
            android:layout_marginEnd="@dimen/main_margin_end"
            android:background="@drawable/round_corners_background"
            android:backgroundTint="@color/primary"
            android:orientation="vertical"
            android:paddingStart="@dimen/block_padding_x"
            android:paddingTop="@dimen/block_padding_y"
            android:paddingEnd="@dimen/block_padding_x"
            android:paddingBottom="@dimen/block_padding_y">
            
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/block_padding_drawable"
            android:text="@string/label_summary"
            android:textSize="@dimen/label_font_size"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_equalizer_white_24dp" />


            <TextView
                android:id="@+id/summary_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="@dimen/block_padding_drawable"
                android:text="@string/dash"
                android:textSize="@dimen/label_font_size"
                app:drawableStartCompat="@drawable/ic_straighten_white_24dp" />

            <TextView
                android:id="@+id/summary_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="@dimen/block_padding_drawable"
                android:text="@string/dash"
                android:textSize="@dimen/label_font_size"
                app:drawableStartCompat="@drawable/ic_schedule_white_24dp" />

            <TextView
                android:id="@+id/summary_positions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="@dimen/block_padding_drawable"
                android:text="@string/dash"
                android:textSize="@dimen/label_font_size"
                app:drawableStartCompat="@drawable/ic_linear_scale_white_24dp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
